[package]
name = "tinyweb"
version = "0.1.0"
authors = ["zzzdong <kuwater@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
async-trait = "0.1"
route-recognizer = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.6.1"

[dev-dependencies]
tokio = { version = "0.2", features = [ "full" ] }
